--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,12 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
-
+		<!-- 加入slf4j依赖包 -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.5</version>
+		</dependency>
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
@@ -43,6 +48,11 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
+			<version>3.2.5.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
 			<version>3.2.5.RELEASE</version>
 		</dependency>
 
@@ -65,7 +75,12 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>4.2.7.SP1</version>
 		</dependency>
-
+		<!-- 加入commons-dbcp依赖包 -->
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.4</version>
+		</dependency>
 
 	</dependencies>
 </project>
