--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,51 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <slf4j.version>1.7.2</slf4j.version>
+		<logback.version>1.0.6</logback.version>
   </properties>
 
-<!-- maven依赖包的书写是有顺序的，请不要更改下面dependency的顺序，避免造成JAR包冲突 -->
 	<dependencies>
-
+		<!--******** logback and slf4j ******** -->  
+		<dependency>  
+			<groupId>ch.qos.logback</groupId>  
+			<artifactId>logback-core</artifactId>  
+			<version>${logback.version}</version>  
+		</dependency>  
+		<dependency>  
+			<groupId>ch.qos.logback</groupId>  
+			<artifactId>logback-classic</artifactId>  
+			<version>${logback.version}</version>  
+		</dependency>  
+		<dependency>  
+			<groupId>ch.qos.logback</groupId>  
+			<artifactId>logback-access</artifactId>  
+			<version>${logback.version}</version>  
+		</dependency>  
+		<dependency>  
+			<groupId>org.slf4j</groupId>  
+			<artifactId>slf4j-api</artifactId>  
+			<version>${slf4j.version}</version>  
+		</dependency>  
+		<!--jul桥接 用来输出 Java Logging Framework (JUL) -->  
+		<dependency>  
+			<groupId>org.slf4j</groupId>  
+			<artifactId>jul-to-slf4j</artifactId>  
+			<version>${slf4j.version}</version>  
+		</dependency>  
+		<!-- jcl桥接，用来输出 第三方Jakarta Commons Logging (JCL) -->  
+		<dependency>  
+			<groupId>org.slf4j</groupId>  
+			<artifactId>jcl-over-slf4j</artifactId>  
+			<version>${slf4j.version}</version>  
+		</dependency>    
+	    <!-- log4j桥接，用来输出 JAR包中log4j Logging (log4j) -->  
+	    <dependency>  
+	        <groupId>org.slf4j</groupId>  
+	        <artifactId>log4j-over-slf4j</artifactId>  
+	        <version>${slf4j.version}</version>  
+	    </dependency>  
+	    <!--**************** logback and slf4j ****************  -->  
 		<!-- 加入mysql驱动依赖包 -->
 		<dependency>
 			<groupId>mysql</groupId>
@@ -31,12 +71,7 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- 加入slf4j依赖包 -->
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.5</version>
-		</dependency>
+		
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
@@ -56,7 +91,6 @@
 			<version>3.2.5.RELEASE</version>
 		</dependency>
 
-		<!-- ehcache需要的依赖 -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
@@ -81,6 +115,39 @@
 			<artifactId>commons-dbcp</artifactId>
 			<version>1.4</version>
 		</dependency>
-
+		
+		<dependency>
+		  <groupId>com.googlecode.usc</groupId>
+		  <artifactId>jdbcdslog</artifactId>
+		  <version>1.0.6.2</version>
+		</dependency>
+		
+		<dependency>
+		  <groupId>cglib</groupId>
+		  <artifactId>cglib</artifactId>
+		  <version>2.2.2</version>
+		</dependency>
+		
+		<!-- 加入SpringMVC依赖包 -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>3.2.5.RELEASE</version>
+		</dependency>
+		<dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+            <version>1.2.2</version>
+        </dependency>
+		<dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+        <dependency>
+	        <groupId>com.github.miemiedev</groupId>
+	        <artifactId>mybatis-paginator</artifactId>
+	        <version>1.2.15</version>
+	    </dependency>
 	</dependencies>
 </project>
