--- a/src/main/resources/env/configurations-dev.properties
+++ b/src/main/resources/env/configurations-dev.properties
@@ -7,3 +7,27 @@ jdbc.maxActive=350
 jdbc.maxIdle=50
 jdbc.minIdle=10
 jdbc.maxWait=-1
+
+
+##################\u5907\u4ed8\u91d1ftp\u63a5\u53e3\uff0c\u8054\u673a\u63a5\u53e3##########################
+#\u5411\u5de5\u884c\u53d1\u8d77\u65e5\u5207\u901a\u77e5\u3001\u6587\u4ef6\u4e0a\u4f20\u901a\u77e5\u7684\u76ee\u6807ip
+somnus.socket.socketIP=192.168.12.127
+#\u5411\u5de5\u884c\u53d1\u8d77\u65e5\u5207\u901a\u77e5\u3001\u6587\u4ef6\u4e0a\u4f20\u901a\u77e5\u7684\u76ee\u6807\u7aef\u53e3
+somnus.socket.socketPort=20114
+#\u79d8\u94a5\u751f\u6210\u7b97\u6cd5
+somnus.signature.keyAlgorithm=RSA
+#\u7b7e\u540d\u751f\u6210\u7b97\u6cd5
+somnus.signature.signAlgorithm=SHA1withRSA
+#\u6570\u5b57\u7b7e\u540d\u7684\u957f\u5ea6,\u5355\u4f4d\u662f\uff1abyte
+somnus.signature.signLength=64
+#sftp\u7528\u6237\u540d
+somnus.sftp.username=bfjin
+#sftp\u5bc6\u7801
+somnus.sftp.password=bfjin
+#sftp\u670d\u52a1\u5668ip
+somnus.sftp.host=192.168.12.36
+#sftp\u670d\u52a1\u5668\u7aef\u53e3
+somnus.sftp.port=22
+#sftp\u7aef\uff0c\u6587\u4ef6\u4e0a\u4f20\u8def\u5f84
+somnus.sftp.destPath=/home/sftp/bfjin/upload
+##################\u5907\u4ed8\u91d1ftp\u63a5\u53e3\uff0c\u8054\u673a\u63a5\u53e3 end ##########################
