--- a/pom.xml
+++ b/pom.xml
@@ -197,11 +197,29 @@
 			<artifactId>ehcache-core</artifactId>
 			<version>${ehcache.version}</version>
 		</dependency>
-		<!-- dom4j需要 -->
+		<!-- dom4j需要 @see http://mayatama.iteye.com/blog/1058048-->
 		<dependency>
             <groupId>jaxen</groupId>
             <artifactId>jaxen</artifactId>
             <version>1.1.1</version>
+            <exclusions>
+            	<exclusion>
+            		<groupId>xerces</groupId>
+            		<artifactId>xercesImpl</artifactId>
+            	</exclusion>
+            </exclusions>
         </dependency>
+        
+        <!-- 加入excel依赖包 -->
+		<dependency>
+          	<groupId>net.sf.jxls</groupId>
+          	<artifactId>jxls-reader</artifactId>
+          	<version>1.0.5</version>
+      	</dependency>
+      	<dependency>
+          	<groupId>net.sf.jxls</groupId>
+          	<artifactId>jxls-core</artifactId>
+          	<version>1.0.5</version>
+      	</dependency>
 	</dependencies>
 </project>
