--- a/pom.xml
+++ b/pom.xml
@@ -228,4 +228,17 @@
 			<version>1.7</version>
 		</dependency>
 	</dependencies>
+	
+	<build>
+	  	<plugins>
+	  		<plugin>
+	  			<groupId>org.apache.maven.plugins</groupId>
+	  			<artifactId>maven-compiler-plugin</artifactId>
+	  			<configuration>
+	  				<target>1.7</target>
+	  				<resource>1.7</resource>
+	  			</configuration>
+	  		</plugin>
+	  	</plugins>
+  </build>
 </project>
