--- a/src/main/resources/env/configurations-dev.properties
+++ b/src/main/resources/env/configurations-dev.properties
@@ -31,3 +31,49 @@ somnus.sftp.port=22
 #sftp\u7aef\uff0c\u6587\u4ef6\u4e0a\u4f20\u8def\u5f84
 somnus.sftp.destPath=/home/sftp/bfjin/upload
 ##################\u5907\u4ed8\u91d1ftp\u63a5\u53e3\uff0c\u8054\u673a\u63a5\u53e3 end ##########################
+
+
+################################JMS\u914D\u7F6E#################################################################################
+#broker\u914D\u7F6E
+jms.brokerUrl=tcp\://192.168.12.214\:61616
+#\u6301\u4E45\u5316\u914D\u7F6E
+jms.template.deliveryPersistent=false
+#\u4F1A\u8BDD\u7F13\u5B58\u914D\u7F6E
+jms.caching.factory.sessionCacheSize=30
+#\u6D88\u8D39\u8005\u6570\u91CF\u914D\u7F6E
+jms.listener.container.concurrentConsumers=4
+jms.listener.container.maxConcurrentConsumers=4
+
+#\u961F\u5217\u914D\u7F6E
+jms.queue.bacs.income=queue.bacs.income?consumer.prefetchSize=5000
+jms.queue.bacs.procotoldraw=queue.bacs.procotoldraw?consumer.prefetchSize=500
+jms.queue.bacs.sample=queue.bacs.sample?consumer.prefetchSize=50
+#\u5E94\u7528\u901A\u77E5\u961F\u5217
+jms.queue.bacs.appnotify=queue.bacs.appnotify?consumer.prefetchSize=50
+#\u8D44\u91D1\u7BA1\u7406\u51FA\u6B3E\u901A\u77E5\u961F\u5217
+jms.queue.bacs.bmpsdrawnotify=queue.bacs.bmpsdrawnotify?consumer.prefetchSize=50
+#\u8D44\u91D1\u7BA1\u7406\u9000\u6B3E\u901A\u77E5\u961F\u5217
+jms.queue.bacs.bmpsrefundnotify=queue.bacs.bmpsrefundnotify?consumer.prefetchSize=50
+
+#\u5916\u90E8Restful\u8C03\u7528
+refund.interface.url=http://192.168.12.215:80/psfp-refund/resource/refund/
+issued.interface.url=http://192.168.12.215:80/psfp-issued/resource/issuedCheck/
+#\u8D44\u91D1\u7BA1\u7406\u8C03\u7528
+bmps.interface.url=http://192.168.12.214:8001/bmps/resource/
+
+############################### cims\u6570\u636E\u66F4\u65B0 #############################################################
+#broker\u914D\u7F6E
+jms.cims.brokerUrl=tcp\://192.168.12.230\:61616?jms.redeliveryPolicy.maximumRedeliveries=5
+
+#Topic\u914D\u7F6E
+jms.topic.cims.merchat=CIMS.TOPIC.MERCHANT
+jms.topic.cims.merchatacct=CIMS.TOPIC.ACCOUNT
+jms.topic.cims.merbasicprdcfg=CIMS.TOPIC.PRD_CFG
+jms.topic.cims.prdrecognizedelay=CIMS.TOPIC.DELAY
+#client\u914D\u7F6E
+jms.topic.cims.merchat.client=bacs_client1_merchant
+jms.topic.cims.merchatacct.client=bacs_client1_account
+jms.topic.cims.merbasicprdcfg.client=bacs_client1_prdcfg
+jms.topic.cims.prdrecognizedelay.client=bacs_client1_delay
+
+cims.interface.url=http://192.168.12.230:8080/cims/resource/
