--- a/src/main/resources/env/configurations-dev.properties
+++ b/src/main/resources/env/configurations-dev.properties
@@ -33,44 +33,44 @@ somnus.sftp.destPath=/home/sftp/bfjin/upload
 ##################\u5907\u4ed8\u91d1ftp\u63a5\u53e3\uff0c\u8054\u673a\u63a5\u53e3 end ##########################
 
 
-################################JMS\u914D\u7F6E#################################################################################
-#broker\u914D\u7F6E
-jms.brokerUrl=tcp\://192.168.12.214\:61616
-#\u6301\u4E45\u5316\u914D\u7F6E
+################################JMS\u914d\u7f6e#################################################################################
+#broker\u914d\u7f6e
+jms.brokerUrl=tcp\://localhost\:61616
+#\u6301\u4e45\u5316\u914d\u7f6e
 jms.template.deliveryPersistent=false
-#\u4F1A\u8BDD\u7F13\u5B58\u914D\u7F6E
+#\u4f1a\u8bdd\u7f13\u5b58\u914d\u7f6e
 jms.caching.factory.sessionCacheSize=30
-#\u6D88\u8D39\u8005\u6570\u91CF\u914D\u7F6E
+#\u6d88\u8d39\u8005\u6570\u91cf\u914d\u7f6e
 jms.listener.container.concurrentConsumers=4
 jms.listener.container.maxConcurrentConsumers=4
 
-#\u961F\u5217\u914D\u7F6E
+#\u961f\u5217\u914d\u7f6e
 jms.queue.bacs.income=queue.bacs.income?consumer.prefetchSize=5000
 jms.queue.bacs.procotoldraw=queue.bacs.procotoldraw?consumer.prefetchSize=500
 jms.queue.bacs.sample=queue.bacs.sample?consumer.prefetchSize=50
-#\u5E94\u7528\u901A\u77E5\u961F\u5217
+#\u5e94\u7528\u901a\u77e5\u961f\u5217
 jms.queue.bacs.appnotify=queue.bacs.appnotify?consumer.prefetchSize=50
-#\u8D44\u91D1\u7BA1\u7406\u51FA\u6B3E\u901A\u77E5\u961F\u5217
+#\u8d44\u91d1\u7ba1\u7406\u51fa\u6b3e\u901a\u77e5\u961f\u5217
 jms.queue.bacs.bmpsdrawnotify=queue.bacs.bmpsdrawnotify?consumer.prefetchSize=50
-#\u8D44\u91D1\u7BA1\u7406\u9000\u6B3E\u901A\u77E5\u961F\u5217
+#\u8d44\u91d1\u7ba1\u7406\u9000\u6b3e\u901a\u77e5\u961f\u5217
 jms.queue.bacs.bmpsrefundnotify=queue.bacs.bmpsrefundnotify?consumer.prefetchSize=50
 
-#\u5916\u90E8Restful\u8C03\u7528
+#\u5916\u90e8Restful\u8c03\u7528
 refund.interface.url=http://192.168.12.215:80/psfp-refund/resource/refund/
 issued.interface.url=http://192.168.12.215:80/psfp-issued/resource/issuedCheck/
-#\u8D44\u91D1\u7BA1\u7406\u8C03\u7528
+#\u8d44\u91d1\u7ba1\u7406\u8c03\u7528
 bmps.interface.url=http://192.168.12.214:8001/bmps/resource/
 
-############################### cims\u6570\u636E\u66F4\u65B0 #############################################################
-#broker\u914D\u7F6E
+############################### cims\u6570\u636e\u66f4\u65b0 #############################################################
+#broker\u914d\u7f6e
 jms.cims.brokerUrl=tcp\://192.168.12.230\:61616?jms.redeliveryPolicy.maximumRedeliveries=5
 
-#Topic\u914D\u7F6E
+#Topic\u914d\u7f6e
 jms.topic.cims.merchat=CIMS.TOPIC.MERCHANT
 jms.topic.cims.merchatacct=CIMS.TOPIC.ACCOUNT
 jms.topic.cims.merbasicprdcfg=CIMS.TOPIC.PRD_CFG
 jms.topic.cims.prdrecognizedelay=CIMS.TOPIC.DELAY
-#client\u914D\u7F6E
+#client\u914d\u7f6e
 jms.topic.cims.merchat.client=bacs_client1_merchant
 jms.topic.cims.merchatacct.client=bacs_client1_account
 jms.topic.cims.merbasicprdcfg.client=bacs_client1_prdcfg
