--- a/src/main/resources/env/configurations-dev.properties
+++ b/src/main/resources/env/configurations-dev.properties
@@ -45,15 +45,13 @@ jms.listener.container.concurrentConsumers=4
 jms.listener.container.maxConcurrentConsumers=4
 
 #\u961f\u5217\u914d\u7f6e
-jms.queue.bacs.income=queue.bacs.income?consumer.prefetchSize=5000
-jms.queue.bacs.procotoldraw=queue.bacs.procotoldraw?consumer.prefetchSize=500
-jms.queue.bacs.sample=queue.bacs.sample?consumer.prefetchSize=50
+jms.queue.somnus.sample=queue.somnus.sample?consumer.prefetchSize=50
 #\u5e94\u7528\u901a\u77e5\u961f\u5217
-jms.queue.bacs.appnotify=queue.bacs.appnotify?consumer.prefetchSize=50
+jms.queue.somnus.appnotify=queue.somnus.appnotify?consumer.prefetchSize=50
 #\u8d44\u91d1\u7ba1\u7406\u51fa\u6b3e\u901a\u77e5\u961f\u5217
-jms.queue.bacs.bmpsdrawnotify=queue.bacs.bmpsdrawnotify?consumer.prefetchSize=50
+jms.queue.somnus.bmpsdrawnotify=queue.somnus.bmpsdrawnotify?consumer.prefetchSize=50
 #\u8d44\u91d1\u7ba1\u7406\u9000\u6b3e\u901a\u77e5\u961f\u5217
-jms.queue.bacs.bmpsrefundnotify=queue.bacs.bmpsrefundnotify?consumer.prefetchSize=50
+jms.queue.somnus.bmpsrefundnotify=queue.somnus.bmpsrefundnotify?consumer.prefetchSize=50
 
 #\u5916\u90e8Restful\u8c03\u7528
 refund.interface.url=http://192.168.12.215:80/psfp-refund/resource/refund/
@@ -71,9 +69,9 @@ jms.topic.cims.merchatacct=CIMS.TOPIC.ACCOUNT
 jms.topic.cims.merbasicprdcfg=CIMS.TOPIC.PRD_CFG
 jms.topic.cims.prdrecognizedelay=CIMS.TOPIC.DELAY
 #client\u914d\u7f6e
-jms.topic.cims.merchat.client=bacs_client1_merchant
-jms.topic.cims.merchatacct.client=bacs_client1_account
-jms.topic.cims.merbasicprdcfg.client=bacs_client1_prdcfg
-jms.topic.cims.prdrecognizedelay.client=bacs_client1_delay
+jms.topic.cims.merchat.client=somnus_client1_merchant
+jms.topic.cims.merchatacct.client=somnus_client1_account
+jms.topic.cims.merbasicprdcfg.client=somnus_client1_prdcfg
+jms.topic.cims.prdrecognizedelay.client=somnus_client1_delay
 
 cims.interface.url=http://192.168.12.230:8080/cims/resource/
