--- a/src/main/resources/env/configurations-dev.properties
+++ b/src/main/resources/env/configurations-dev.properties
@@ -75,3 +75,16 @@ jms.topic.cims.merbasicprdcfg.client=somnus_client1_prdcfg
 jms.topic.cims.prdrecognizedelay.client=somnus_client1_delay
 
 cims.interface.url=http://192.168.12.230:8080/cims/resource/
+
+redis.host=192.168.1.100
+redis.port=6379
+redis.pass=passw0rd
+
+#\u6700\u5927\u7a7a\u95f2\u6570 
+redis.maxIdle=300
+#\u6700\u5927\u8fde\u63a5\u6570
+redis.maxActive=600
+#\u6700\u5927\u5efa\u7acb\u8fde\u63a5\u7b49\u5f85\u65f6\u95f4
+redis.maxWait=1000
+#\u6307\u660e\u662f\u5426\u5728\u4ece\u6c60\u4e2d\u53d6\u51fa\u8fde\u63a5\u524d\u8fdb\u884c\u68c0\u9a8c,\u5982\u679c\u68c0\u9a8c\u5931\u8d25,\u5219\u4ece\u6c60\u4e2d\u53bb\u9664\u8fde\u63a5\u5e76\u5c1d\u8bd5\u53d6\u51fa\u53e6\u4e00\u4e2a
+redis.testOnBorrow=true
