--- a/src/main/resources/env/configurations-dev.properties
+++ b/src/main/resources/env/configurations-dev.properties
@@ -35,7 +35,7 @@ somnus.sftp.destPath=/home/sftp/bfjin/upload
 
 ################################JMS\u914d\u7f6e#################################################################################
 #broker\u914d\u7f6e
-jms.brokerUrl=tcp\://localhost\:61616
+jms.brokerUrl=tcp\://192.168.1.100\:61616
 #\u6301\u4e45\u5316\u914d\u7f6e
 jms.template.deliveryPersistent=false
 #\u4f1a\u8bdd\u7f13\u5b58\u914d\u7f6e
@@ -61,7 +61,7 @@ bmps.interface.url=http://192.168.12.214:8001/bmps/resource/
 
 ############################### cims\u6570\u636e\u66f4\u65b0 #############################################################
 #broker\u914d\u7f6e
-jms.cims.brokerUrl=tcp\://192.168.12.230\:61616?jms.redeliveryPolicy.maximumRedeliveries=5
+jms.cims.brokerUrl=tcp\://192.168.1.100\:61616?jms.redeliveryPolicy.maximumRedeliveries=5
 
 #Topic\u914d\u7f6e
 jms.topic.cims.merchat=CIMS.TOPIC.MERCHANT
