--- a/src/main/resources/env/configurations-dev.properties
+++ b/src/main/resources/env/configurations-dev.properties
@@ -45,13 +45,10 @@ jms.listener.container.concurrentConsumers=4
 jms.listener.container.maxConcurrentConsumers=4
 
 #\u961f\u5217\u914d\u7f6e
+#\u5b57\u7b26\u4e32\u901a\u77e5\u961f\u5217
 jms.queue.somnus.sample=queue.somnus.sample?consumer.prefetchSize=50
-#\u5e94\u7528\u901a\u77e5\u961f\u5217
-jms.queue.somnus.appnotify=queue.somnus.appnotify?consumer.prefetchSize=50
-#\u8d44\u91d1\u7ba1\u7406\u51fa\u6b3e\u901a\u77e5\u961f\u5217
-jms.queue.somnus.bmpsdrawnotify=queue.somnus.bmpsdrawnotify?consumer.prefetchSize=50
-#\u8d44\u91d1\u7ba1\u7406\u9000\u6b3e\u901a\u77e5\u961f\u5217
-jms.queue.somnus.bmpsrefundnotify=queue.somnus.bmpsrefundnotify?consumer.prefetchSize=50
+#\u5bf9\u8c61\u901a\u77e5\u961f\u5217
+jms.queue.somnus.sample2=queue.somnus.sample2?consumer.prefetchSize=50
 
 #\u5916\u90e8Restful\u8c03\u7528
 refund.interface.url=http://192.168.12.215:80/psfp-refund/resource/refund/
@@ -61,7 +58,7 @@ bmps.interface.url=http://192.168.12.214:8001/bmps/resource/
 
 ############################### cims\u6570\u636e\u66f4\u65b0 #############################################################
 #broker\u914d\u7f6e
-jms.cims.brokerUrl=tcp\://192.168.1.100\:61616?jms.redeliveryPolicy.maximumRedeliveries=5
+jms.cims.brokerUrl=tcp\://192.168.1.101\:61616?jms.redeliveryPolicy.maximumRedeliveries=5
 
 #Topic\u914d\u7f6e
 jms.topic.cims.merchat=CIMS.TOPIC.MERCHANT
