--- a/pom.xml
+++ b/pom.xml
@@ -216,6 +216,12 @@
 			<version>2.7.3</version>
 		</dependency>
 		
+		<dependency>
+    <groupId>com.taobao.metamorphosis</groupId>
+    <artifactId>metamorphosis-client</artifactId>
+    <version>1.4.6.2</version>
+</dependency>
+		
 	</dependencies>
 
 	<build>
