--- a/pom.xml
+++ b/pom.xml
@@ -215,6 +215,12 @@
 			<artifactId>jedis</artifactId>
 			<version>2.7.3</version>
 		</dependency>
+		<!-- memcached -->
+		<dependency>
+			<groupId>spy</groupId>
+			<artifactId>spymemcached</artifactId>
+			<version>2.7.3</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>com.taobao.metamorphosis</groupId>
@@ -227,12 +233,16 @@
             <artifactId>commons-configuration</artifactId>
             <version>1.10</version>
         </dependency>
-        
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.1</version>
         </dependency>
+        <dependency>
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
+			<version>3.2.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
