--- a/src/main/resources/env/configurations-dev.properties
+++ b/src/main/resources/env/configurations-dev.properties
@@ -32,7 +32,7 @@ somnus.sftp.port=22
 somnus.sftp.destPath=/home/sftp/bfjin/upload
 ##################\u5907\u4ed8\u91d1ftp\u63a5\u53e3\uff0c\u8054\u673a\u63a5\u53e3 end ##########################
 
-
+jms.metaq.zookeeper.brokerUrl=192.168.1.101:12181
 ################################JMS\u914d\u7f6e#################################################################################
 #broker\u914d\u7f6e
 jms.brokerUrl=tcp\://192.168.1.101\:61616
@@ -50,6 +50,7 @@ jms.queue.somnus.sample=queue.somnus.sample?consumer.prefetchSize=50
 #\u5bf9\u8c61\u901a\u77e5\u961f\u5217
 jms.queue.somnus.sample2=queue.somnus.sample2?consumer.prefetchSize=50
 
+jms.topic.somnus.sample=jms.topic.somnus.sample
 #\u5916\u90e8Restful\u8c03\u7528
 refund.interface.url=http://192.168.12.215:80/psfp-refund/resource/refund/
 issued.interface.url=http://192.168.12.215:80/psfp-issued/resource/issuedCheck/
