love-somnus <928200207@qq.com>

--- a/src/main/resources/env/configurations-dev.properties
+++ b/src/main/resources/env/configurations-dev.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/demo
+jdbc.url=jdbc:mysql://183.60.227.88:3306/demo
 jdbc.username=root
 jdbc.password=passw0rd
 jdbc.initialSize=50
@@ -32,10 +32,11 @@ somnus.sftp.port=22
 somnus.sftp.destPath=/home/sftp/bfjin/upload
 ##################\u5907\u4ed8\u91d1ftp\u63a5\u53e3\uff0c\u8054\u673a\u63a5\u53e3 end ##########################
 
-jms.metaq.zookeeper.brokerUrl=192.168.1.101:2181,192.168.1.102:2181,192.168.1.103:2181
+#jms.metaq.zookeeper.brokerUrl=192.168.1.101:2181,192.168.1.102:2181,192.168.1.103:2181
+jms.metaq.zookeeper.brokerUrl=183.60.227.88:2181
 ################################JMS\u914d\u7f6e#################################################################################
 #broker\u914d\u7f6e
-jms.brokerUrl=tcp\://192.168.1.101\:61616
+jms.brokerUrl=tcp\://183.60.227.88\:61616
 #\u6301\u4e45\u5316\u914d\u7f6e
 jms.template.deliveryPersistent=false
 #\u4f1a\u8bdd\u7f13\u5b58\u914d\u7f6e
@@ -59,7 +60,7 @@ bmps.interface.url=http://192.168.12.214:8001/bmps/resource/
 
 ############################### cims\u6570\u636e\u66f4\u65b0 #############################################################
 #broker\u914d\u7f6e
-jms.cims.brokerUrl=tcp\://192.168.1.101\:61616?jms.redeliveryPolicy.maximumRedeliveries=5
+jms.cims.brokerUrl=tcp\://183.60.227.88\:61616?jms.redeliveryPolicy.maximumRedeliveries=5
 
 #Topic\u914d\u7f6e
 jms.topic.cims.merchat=CIMS.TOPIC.MERCHANT
@@ -74,7 +75,7 @@ jms.topic.cims.prdrecognizedelay.client=somnus_client1_delay
 
 cims.interface.url=http://192.168.12.230:8080/cims/resource/
 
-redis.host=192.168.1.100
+redis.host=183.60.227.88
 redis.port=6379
 redis.pass=passw0rd
 
@@ -87,4 +88,4 @@ redis.maxWait=1000
 #\u6307\u660e\u662f\u5426\u5728\u4ece\u6c60\u4e2d\u53d6\u51fa\u8fde\u63a5\u524d\u8fdb\u884c\u68c0\u9a8c,\u5982\u679c\u68c0\u9a8c\u5931\u8d25,\u5219\u4ece\u6c60\u4e2d\u53bb\u9664\u8fde\u63a5\u5e76\u5c1d\u8bd5\u53d6\u51fa\u53e6\u4e00\u4e2a
 redis.testOnBorrow=true
 
-memcached.server = 192.168.1.101:11211
+memcached.server = 183.60.227.88:11211
