--- a/src/main/resources/env/configurations-dev.properties
+++ b/src/main/resources/env/configurations-dev.properties
@@ -8,33 +8,7 @@ jdbc.maxIdle=50
 jdbc.minIdle=10
 jdbc.maxWait=-1
 
-
-##################\u5907\u4ed8\u91d1ftp\u63a5\u53e3\uff0c\u8054\u673a\u63a5\u53e3##########################
-#\u5411\u5de5\u884c\u53d1\u8d77\u65e5\u5207\u901a\u77e5\u3001\u6587\u4ef6\u4e0a\u4f20\u901a\u77e5\u7684\u76ee\u6807ip
-somnus.socket.socketIP=192.168.12.127
-#\u5411\u5de5\u884c\u53d1\u8d77\u65e5\u5207\u901a\u77e5\u3001\u6587\u4ef6\u4e0a\u4f20\u901a\u77e5\u7684\u76ee\u6807\u7aef\u53e3
-somnus.socket.socketPort=20114
-#\u79d8\u94a5\u751f\u6210\u7b97\u6cd5
-somnus.signature.keyAlgorithm=RSA
-#\u7b7e\u540d\u751f\u6210\u7b97\u6cd5
-somnus.signature.signAlgorithm=SHA1withRSA
-#\u6570\u5b57\u7b7e\u540d\u7684\u957f\u5ea6,\u5355\u4f4d\u662f\uff1abyte
-somnus.signature.signLength=64
-#sftp\u7528\u6237\u540d
-somnus.sftp.username=bfjin
-#sftp\u5bc6\u7801
-somnus.sftp.password=bfjin
-#sftp\u670d\u52a1\u5668ip
-somnus.sftp.host=192.168.12.36
-#sftp\u670d\u52a1\u5668\u7aef\u53e3
-somnus.sftp.port=22
-#sftp\u7aef\uff0c\u6587\u4ef6\u4e0a\u4f20\u8def\u5f84
-somnus.sftp.destPath=/home/sftp/bfjin/upload
-##################\u5907\u4ed8\u91d1ftp\u63a5\u53e3\uff0c\u8054\u673a\u63a5\u53e3 end ##########################
-
-#jms.metaq.zookeeper.brokerUrl=192.168.1.101:2181,192.168.1.102:2181,192.168.1.103:2181
-jms.metaq.zookeeper.brokerUrl=183.60.227.88:2181
-################################JMS\u914d\u7f6e#################################################################################
+#################################ActiveMQ#################################
 #broker\u914d\u7f6e
 jms.brokerUrl=tcp\://183.60.227.88\:61616
 #\u6301\u4e45\u5316\u914d\u7f6e
@@ -51,41 +25,23 @@ jms.queue.somnus.sample=queue.somnus.sample?consumer.prefetchSize=50
 #\u5bf9\u8c61\u901a\u77e5\u961f\u5217
 jms.queue.somnus.sample2=queue.somnus.sample2?consumer.prefetchSize=50
 
+#################################MetaQ#################################
+#jms.metaq.zookeeper.brokerUrl=192.168.1.101:2181,192.168.1.102:2181,192.168.1.103:2181
+jms.metaq.zookeeper.brokerUrl=183.60.227.88:2181
 jms.topic.somnus.sample=jms.topic.somnus.sample
-#\u5916\u90e8Restful\u8c03\u7528
-refund.interface.url=http://192.168.12.215:80/psfp-refund/resource/refund/
-issued.interface.url=http://192.168.12.215:80/psfp-issued/resource/issuedCheck/
-#\u8d44\u91d1\u7ba1\u7406\u8c03\u7528
-bmps.interface.url=http://192.168.12.214:8001/bmps/resource/
 
-############################### cims\u6570\u636e\u66f4\u65b0 #############################################################
-#broker\u914d\u7f6e
-jms.cims.brokerUrl=tcp\://183.60.227.88\:61616?jms.redeliveryPolicy.maximumRedeliveries=5
-
-#Topic\u914d\u7f6e
-jms.topic.cims.merchat=CIMS.TOPIC.MERCHANT
-jms.topic.cims.merchatacct=CIMS.TOPIC.ACCOUNT
-jms.topic.cims.merbasicprdcfg=CIMS.TOPIC.PRD_CFG
-jms.topic.cims.prdrecognizedelay=CIMS.TOPIC.DELAY
-#client\u914d\u7f6e
-jms.topic.cims.merchat.client=somnus_client1_merchant
-jms.topic.cims.merchatacct.client=somnus_client1_account
-jms.topic.cims.merbasicprdcfg.client=somnus_client1_prdcfg
-jms.topic.cims.prdrecognizedelay.client=somnus_client1_delay
-
-cims.interface.url=http://192.168.12.230:8080/cims/resource/
-
+#################################redis#################################
 redis.host=183.60.227.88
 redis.port=6379
 redis.pass=passw0rd
-
 #\u6700\u5927\u7a7a\u95f2\u6570 
-redis.maxIdle=300
+redis.pool.maxIdle=300
 #\u6700\u5927\u8fde\u63a5\u6570
-redis.maxActive=600
+redis.pool.maxTotal=600
 #\u6700\u5927\u5efa\u7acb\u8fde\u63a5\u7b49\u5f85\u65f6\u95f4
-redis.maxWait=1000
+redis.pool.maxWaitMillis=1000
 #\u6307\u660e\u662f\u5426\u5728\u4ece\u6c60\u4e2d\u53d6\u51fa\u8fde\u63a5\u524d\u8fdb\u884c\u68c0\u9a8c,\u5982\u679c\u68c0\u9a8c\u5931\u8d25,\u5219\u4ece\u6c60\u4e2d\u53bb\u9664\u8fde\u63a5\u5e76\u5c1d\u8bd5\u53d6\u51fa\u53e6\u4e00\u4e2a
-redis.testOnBorrow=true
+redis.pool.testOnBorrow=true
 
+#################################memcached#################################
 memcached.server = 183.60.227.88:11211
