--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,7 @@
         <activemq.version>5.7.0</activemq.version>
 	</properties>
 	<!-- 指定Maven仓库 -->
-	<repositories>
-		<!-- oschina的maven仓库 -->
+	<!-- <repositories>
 		<repository>
 			<id>public</id>
 			<name>Public Repositories</name>
@@ -48,7 +47,7 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
-	</repositories>
+	</repositories> -->
 	<dependencies>
 		<!--******** logback and slf4j ******** -->
 		<dependency>
@@ -209,9 +208,9 @@
 		</dependency>
 		<!-- memcached -->
 		<dependency>
-			<groupId>spy</groupId>
+			<groupId>net.spy</groupId>
 			<artifactId>spymemcached</artifactId>
-			<version>2.7.3</version>
+			<version>2.12.0</version>
 		</dependency>
 		
 		<dependency>
