--- a/pom.xml
+++ b/pom.xml
@@ -35,11 +35,11 @@
         <activemq.version>5.7.0</activemq.version>
 	</properties>
 	<!-- 指定Maven仓库 -->
-	<!-- <repositories>
+	<repositories>
 		<repository>
 			<id>public</id>
 			<name>Public Repositories</name>
-			<url>http://localhost:8081/nexus/content/groups/public/</url>
+			<url>http://maven.wozsz.com/content/groups/public/</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
@@ -47,7 +47,7 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
-	</repositories> -->
+	</repositories>
 	<dependencies>
 		<!--******** logback and slf4j ******** -->
 		<dependency>
