--- a/src/main/resources/env/configurations-dev.properties
+++ b/src/main/resources/env/configurations-dev.properties
@@ -30,6 +30,9 @@ jms.queue.somnus.sample2=queue.somnus.sample2?consumer.prefetchSize=50
 jms.metaq.zookeeper.brokerUrl=183.60.227.88:2181
 jms.topic.somnus.sample=jms.topic.somnus.sample
 
+#################################RocketMQ#################################
+rocketmq.topic=TopicTest0
+
 #################################redis#################################
 redis.host=183.60.227.88
 redis.port=6379
