--- a/src/main/resources/env/configurations-dev.properties
+++ b/src/main/resources/env/configurations-dev.properties
@@ -31,6 +31,8 @@ jms.metaq.zookeeper.brokerUrl=183.60.227.88:2181
 jms.topic.somnus.sample=jms.topic.somnus.sample
 
 #################################RocketMQ#################################
+#jms.rocketmq.namesrvAddr=172.16.235.77:9876;172.16.235.78:9876
+jms.rocketmq.namesrvAddr=183.60.227.88:9876
 rocketmq.topic=TopicTest0
 
 #################################redis#################################
