--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 		<!-- aspect -->
 		<aspectj.version>1.7.4</aspectj.version>
 		<!-- datasource -->
-		<commons.dbcp.version>1.4</commons.dbcp.version>
+		<alibaba.druid.version>1.0.25</alibaba.druid.version>
 		<jdbcdslog.version>1.0.6.2</jdbcdslog.version>
 		<!-- proxy -->
 		<cglib.version>2.2.2</cglib.version>
@@ -130,9 +130,9 @@
 		</dependency>
 		<!-- datasource -->
 		<dependency>
-			<groupId>commons-dbcp</groupId>
-			<artifactId>commons-dbcp</artifactId>
-			<version>${commons.dbcp.version}</version>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>${alibaba.druid.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.googlecode.usc</groupId>
