调整xml的格式

--- a/src/main/resources/env/configurations-dev.properties
+++ b/src/main/resources/env/configurations-dev.properties
@@ -23,6 +23,8 @@ jms.listener.container.maxConcurrentConsumers=4
 #\u961f\u5217\u914d\u7f6e
 #\u5b57\u7b26\u4e32\u901a\u77e5\u961f\u5217
 jms.queue.somnus.sample=queue.somnus.sample?consumer.prefetchSize=50
+jms.queue.somnus.string.sample=queue.somnus.string.sample?consumer.prefetchSize=50
+jms.queue.somnus.object.sample=queue.somnus.object.sample?consumer.prefetchSize=50
 #\u5bf9\u8c61\u901a\u77e5\u961f\u5217
 jms.queue.somnus.sample2=queue.somnus.sample2?consumer.prefetchSize=50
 
@@ -30,6 +32,8 @@ jms.queue.somnus.sample2=queue.somnus.sample2?consumer.prefetchSize=50
 #jms.metaq.zookeeper.brokerUrl=192.168.1.101:2181,192.168.1.102:2181,192.168.1.103:2181
 jms.metaq.zookeeper.brokerUrl=183.60.227.88:2181
 jms.topic.somnus.sample=jms.topic.somnus.sample
+jms.topic.somnus.string.sample=jms.topic.somnus.string.sample
+jms.topic.somnus.object.sample=jms.topic.somnus.object.sample
 
 #################################RocketMQ#################################
 #jms.rocketmq.namesrvAddr=172.16.235.77:9876;172.16.235.78:9876
