--- a/pom.xml
+++ b/pom.xml
@@ -7,16 +7,13 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>Spring</name>
-	<url>http://maven.apache.org</url>
-
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!-- log -->
 		<slf4j.version>1.7.2</slf4j.version>
 		<logback.version>1.0.6</logback.version>
 		<!-- spring -->
-		<spring.version>3.2.5.RELEASE</spring.version>
+		<spring.version>4.3.5.RELEASE</spring.version>
 		<!-- aspect -->
 		<aspectj.version>1.7.4</aspectj.version>
 		<!-- datasource -->
@@ -33,15 +30,25 @@
 		<geronimo.version>1.1.1</geronimo.version>
 		<!-- MQ -->
 		<activemq.version>5.7.0</activemq.version>
+		<alibaba.rocketmq.version>3.2.6</alibaba.rocketmq.version>
+		<!-- bean validator -->
+		<hibernate.validator.version>4.3.2.Final</hibernate.validator.version>
+		<!-- commons tools -->
+		<commons.configuration.version>1.10</commons.configuration.version>
+		<commons.lang3.version>3.1</commons.lang3.version>
+		<commons.collections.version>3.2.1</commons.collections.version>
+		<httpcomponents.version>4.5.2</httpcomponents.version>
+		<!-- data protocol -->
+		<jackson.version>2.2.3</jackson.version>
+		<!-- memcached -->
+		<memcached.version>2.12.0</memcached.version>
+		<!-- redis -->
+		<spring.data.redis>1.7.6.RELEASE</spring.data.redis>
+		<redis.version>2.7.3</redis.version>
 	</properties>
 
 	<dependencies>
 		<!--******** logback and slf4j ******** -->
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j.version}</version>
-		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jcl-over-slf4j</artifactId>
@@ -92,33 +99,23 @@
 		</dependency>
 
 		<!-- spring -->
-		<dependency><!-- test -->
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
+			<scope>test</scope>
 		</dependency>
-		<dependency><!-- core aopalliance context aop expression -->
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<dependency><!-- orm jdbc tx -->
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		<dependency><!-- context-support -->
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 			<version>${spring.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>commons-logging</groupId>
-					<artifactId>commons-logging</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
-		<dependency><!-- webmvc web -->
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
@@ -128,6 +125,7 @@
 			<artifactId>spring-jms</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		
 		<!-- datasource -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
@@ -139,6 +137,7 @@
 			<artifactId>jdbcdslog</artifactId>
 			<version>${jdbcdslog.version}</version>
 		</dependency>
+		
 		<!-- proxy -->
 		<dependency>
 			<groupId>cglib</groupId>
@@ -157,96 +156,75 @@
 			<artifactId>geronimo-jta_1.1_spec</artifactId>
 			<version>${geronimo.version}</version>
 		</dependency>
+		
 		<!-- activeMQ -->
-		<dependency>
-			<groupId>org.apache.activemq</groupId>
-			<artifactId>activemq-core</artifactId>
-			<version>${activemq.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.apache.activemq.protobuf</groupId>
-					<artifactId>activemq-protobuf</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.springframework.osgi</groupId>
-					<artifactId>spring-osgi-core</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.osgi</groupId>
-					<artifactId>org.osgi.core</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>activemq-pool</artifactId>
 			<version>${activemq.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.alibaba.rocketmq</groupId>
+			<artifactId>rocketmq-client</artifactId>
+			<version>${alibaba.rocketmq.version}</version>
+		</dependency>
+		
 		<!-- redis -->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-redis</artifactId>
-			<version>1.6.0.RELEASE</version>
+			<version>${spring.data.redis}</version>
 		</dependency>
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
-			<version>2.7.3</version>
+			<version>${redis.version}</version>
 		</dependency>
+		
 		<!-- memcached -->
 		<dependency>
 			<groupId>net.spy</groupId>
 			<artifactId>spymemcached</artifactId>
-			<version>2.12.0</version>
+			<version>${memcached.version}</version>
 		</dependency>
 
-		<dependency>
-			<groupId>com.taobao.metamorphosis</groupId>
-			<artifactId>metamorphosis-client</artifactId>
-			<version>1.4.6.2</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.alibaba.rocketmq</groupId>
-			<artifactId>rocketmq-client</artifactId>
-			<version>3.2.6</version>
-		</dependency>
-
+		<!-- commons tool -->
 		<dependency>
 			<groupId>commons-configuration</groupId>
 			<artifactId>commons-configuration</artifactId>
-			<version>1.10</version>
+			<version>${commons.configuration.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.1</version>
+			<version>${commons.lang3.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-collections</groupId>
 			<artifactId>commons-collections</artifactId>
-			<version>3.2.1</version>
+			<version>${commons.collections.version}</version>
 		</dependency>
 
 		<!-- jackson -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.2.3</version>
+			<version>${jackson.version}</version>
 		</dependency>
 
 		<!-- bean validator -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>4.3.2.Final</version>
+			<version>${hibernate.validator.version}</version>
 		</dependency>
 
 		<!-- HttpClient -->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.5.1</version>
+			<version>${httpcomponents.version}</version>
 		</dependency>
 	</dependencies>
 
